Moved files to other table
